[package]
name = "rvm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.3" }
blake3 = "1.8.2"
futures = "0.3.31"
http-body-util = "0.1.3"
hyper = "1.6.0"
opendal = { version = "0.53.1", features = ["services-fs"]}
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.6.1", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmtime = { version = "32.0.0", features = ["async", "runtime"] }
wasmtime-wasi = "32.0.0"
wasmtime-wasi-http = "32.0.0"
